--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.2.1"
 spyder-kernels = "2.5"
 matplotlib = "^3.8.3"
 tqdm = "^4.66.2"
+scipy = "^1.14.1"
 
 
 [tool.poetry.group.dev.dependencies]
